create IngredientVisibility, split off from IngredientFilter